LayoutTests/ietestcenter/Javascript/TestCases/15.10.7.4-1.js
@@ -27,11 +27,8 @@ path: "TestCases/chapter15/15.10/15.10.7/15.10.7.4/15.10.7.4-1.js",
 description: "RegExp.prototype.multiline should throw because RegExp.prototype is not a RegExp",
 
 test: function testcase() {
-    try {
-        RegExp.prototype.multiline;
-        return false;
-    } catch (e) {
+    if ((typeof(RegExp.prototype.multiline)) === 'undefined')
         return true;
-    }
+    return false;
  }
 });
